added average rating value (4/5)

--- a/fortran_usage/ccp5_application.tex
+++ b/fortran_usage/ccp5_application.tex
@@ -75,7 +75,7 @@ pFUnit and CamFort. This is a trend the workshop organisers have noticed and int
 of code verification which is generally not very well covered for the Fortran programming language. 
 \section{History of the Workshop}
 The Fortran Modernisation Workshop has been hosted at six sites which are listed in Table~\ref{fmw:sites} with an
-average of 33.5 attendees per session. The workshop was rated by the attendees who gave it a value out of five. 
+average of 33.5 attendees per session. The workshop was rated by the attendees who gave it an average of 4.0 out of 5.
 \begin{table}[H]
 \centering 
 \begin{tabular}{|c|c|c|c|}
@@ -114,8 +114,8 @@ Computational chemistry codes are predominantly written in Fortran as well many 
 engineering and earth sciences. Fortran codes account for approximately 73\% of CPU time on the Archer
 supercomputer~\cite{archer:usage}, making Fortran the main programming language for computational science. For the compelling
 reasons outlined herein, we are requesting funding from CCP5 for the Fortran Modernisation Workshop. For further questions,
-please feel free to contact me at \texttt{fatima.chami@stfc.ac.uk} or my colleague \texttt{wadud.miah@nag.co.uk} who
-will be happy to discuss this further. 
+please feel free to contact me at \texttt{fatima.chami@stfc.ac.uk} or my colleagues, \texttt{fs395@cam.ac.uk} or 
+\texttt{wadud.miah@nag.co.uk} who will be happy to discuss this further. 
 %
 \bibliographystyle{abbrv}
 \bibliography{ccp5_application}
