added blog posts

--- a/fortran_usage/ccp5_application.bib
+++ b/fortran_usage/ccp5_application.bib
@@ -32,3 +32,17 @@
   howpublished = "\url{http://www.archer.ac.uk/status/codes/}",
   year = {Nov. 2016}
 }
+
+@misc{jon:rsdn,
+  author = {{Jonathan Cooper}},
+  title = {{Report on the Fortran Modernisation Workshop}},
+  howpublished = "\url{https://rsdn.oerc.ox.ac.uk/node/102}",
+  year = {2016}
+}
+
+@misc{lusher:soton,
+  author = {{David Lusher}},
+  title = {{Fortran Modernization Workshop}},
+  howpublished = "\url{http://ngcm.soton.ac.uk/blog/2016-07-28/fortran-modernization-workshop.html}",
+  year = {2016}
+}
