--- a/fortran_usage/ccp5_application.tex
+++ b/fortran_usage/ccp5_application.tex
@@ -7,10 +7,10 @@
 \usepackage{amssymb}
 \setlength{\parindent}{0mm}
 \title{\bf CCP5 Funding Application for the Fortran Modernisation Workshop}
-\author{Fatima Chami\footnote{fatima.chami@stfc.ac.uk},
-  Wadud Miah\footnote{wadud.miah@nag.co.uk},
-  Filippo Spiga\footnote{fs395@cam.ac.uk} and
-  Kyle Fernandes\footnote{kj333@cam.ac.uk}}
+\author{Fatima Chami\footnote{\texttt{fatima.chami@stfc.ac.uk}},
+  Wadud Miah\footnote{\texttt{wadud.miah@nag.co.uk}},
+  Filippo Spiga\footnote{\texttt{fs395@cam.ac.uk}} and
+  Kyle Fernandes\footnote{\texttt{kj333@cam.ac.uk}}}
 \date{\today}
 
 \begin{document}
@@ -25,9 +25,9 @@ It covers the more modern features of Fortran, namely 90, 95, 2003 and 2008, to 
 Fortran 77 and 66 codes. It also aims to teach attendees how to write portable, efficient, extensible and modular code in Fortran for
 multi-scale and multi-physics computational science. The workshop is run by a number of organisers which are listed in the author's
 list who are computational scientists with extensive coding experience, making them qualified to run this workshop. In addition, the
-Digital Technology Group from Cambridge University also attend to
-present their CamFort Fortran~\cite{cam:naps} verification tool and Allinea~\cite{allinea} also present their debugging and
-profiling tools for Fortran. \\
+Digital Technology Group from Cambridge University present their CamFort Fortran~\cite{cam:naps} verification tool and
+Allinea~\cite{allinea} present their debugging and
+profiling tools for Fortran at the workshop. \\
 
 Although there are a number of Fortran and software engineering workshops run by the Archer HPC
 service and the Software Sustainability Institute, such workshops tend to be very generic and do not address any particular
@@ -49,7 +49,7 @@ The topics that are covered in this workshop are listed below:
 \item Introduction to parallelism for Fortran;
 \item Debugging and profiling Fortran using Allinea DDT and MAP.
 \end{itemize}
-The technologies listed above cover the code development life-cycle as well as the computational science workflow,
+The technologies listed above cover the code development lifecycle as well as the computational science workflow,
 again making this workshop very unique and specific to computational science. Further information on the
 workflows can be found at~\cite{fmw:exp}. The Fortran standards used by the attendees is shown in Figure~\ref{fortran_usage:png}. 
 \begin{figure}[H]
@@ -91,7 +91,8 @@ STFC Daresbury & October 2016 & 30 & 4.556/5 \\ \hline
 \caption{Fortran Modernisation Workshop sessions}
 \label{fmw:sites}
 \end{table}
-The current list of future workshop sessions are shown in Table~\ref{fmw:future} and the workshop organisers are in
+Blog posts on the Oxford University and University of Southampton workshops can be found at~\cite{jon:rsdn,lusher:soton}.
+The list of future workshop sessions are shown in Table~\ref{fmw:future} and the workshop organisers are in
 discussion with other sites regarding hosting the workshop. 
 \begin{table}[H]
 \centering 
@@ -114,7 +115,7 @@ Computational chemistry codes are predominantly written in Fortran as well many 
 engineering and earth sciences. Fortran codes account for approximately 73\% of CPU time on the Archer
 supercomputer~\cite{archer:usage}, making Fortran the main programming language for computational science. For the compelling
 reasons outlined herein, we are requesting funding from CCP5 for the Fortran Modernisation Workshop. For further questions,
-please feel free to contact me at \texttt{fatima.chami@stfc.ac.uk} or my colleagues, \texttt{fs395@cam.ac.uk} or 
+please feel free to contact me at \texttt{fatima.chami@stfc.ac.uk} or my colleagues \texttt{fs395@cam.ac.uk} or 
 \texttt{wadud.miah@nag.co.uk} who will be happy to discuss this further. 
 %
 \bibliographystyle{abbrv}
