--- a/exercises/exercises.tex
+++ b/exercises/exercises.tex
@@ -62,18 +62,11 @@ not know what all this means - the focus of the exercise is on Fortran programmi
 Maths. \\
 
 The exercises are split into two parts: one set for the first day and a second
-set for the second day. Obtain the exercises by using the commands:
-\begin{verbatim}
-cp /usr/local/src/fmw_exercise.tar.gz $HOME
-cd $HOME
-tar -zxvf fmw_exercise.tar.gz
-\end{verbatim}
-which will extract the exercises to the \texttt{fmw\_exercise/} directory. Change into the 
-\texttt{fmw\_exercise/} directory:
+set for the second day. Change into the \texttt{fmw\_exercises/} directory:
 \begin{verbatim}
 git config --global user.name "firstname lastname"
 git config --global user.email firstname.lastname@address.com
-cd fmw_exercise
+cd fmw_exercises
 git init
 git add .
 git commit -m "initial version"
